--- a/app/index.html
+++ b/app/index.html
@@ -101,7 +101,6 @@
         <button id="btn-config" class="button-header"><img src="./img/settings.svg" />Settings</button>
         <button id="btn-logout" class="button-header"><img src="./img/exit.svg" onclick="logout()"/>Logout</button>
       </div>
-      <input type="hidden" id="user_id" value="5" />
     </header>
     <div id="principal-content">
       <div id="painel-content">
@@ -142,10 +141,8 @@
         </div>
 
         <div id="add-button">
-          <button id="add-expense" onclick="createAddExpense()"><img src="./img/add.svg"
-              onclick="openAddExpense()"></button>
-          <button id="add-category" onclick="createAddCategories()"><img src="./img/add-list.png"
-              onclick="openAddCategories()"></button>
+          <button id="add-expense" onclick="createAddExpense()"><img src="./img/add.svg"></button>
+          <button id="add-category" onclick="createAddCategories()"><img src="./img/add-list.png"></button>
         </div>
 
       </div>
@@ -177,8 +174,7 @@
           </div>
         </div>
   
-        <input type="hidden" id="user_id" value="5" />
-  
+ 
         <div class="btns">
           <button id="btn-create-expense" onlick="">Register</button>
         </div>
@@ -217,6 +213,7 @@
     Powered by FrontGrego
   </footer>
   <script type="text/javascript" src="js/animations.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
